Fixed a bug related to remote reads.